--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
     <button id="resultButton">Attack!!</button>
 
     <h2 id="resultTag"></h2>
-    <h4>My name is khan</h4>
+    <h4>My name is khan 2</h4>
   </body>
 </html>
